--- a/index.html
+++ b/index.html
@@ -157,13 +157,16 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="imgdiv">
               <img
+                class="img-fluid"
                 src="./Assets/features-illustration.svg"
                 alt="Features pic"
               />
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-end">
-            <div class="contentdiv w-75 align-content-center">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-lg-end mt-5 mt-lg-0"
+          >
+            <div class="contentdiv w-75 align-content-lg-center">
               <h1>We Provide Many Features You Can Use</h1>
               <p>
                 You can explore th features that we provide with fun and have
@@ -396,21 +399,25 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
               <div class="card review-card p-3 mb-4">
                 <div class="cardtop">
-                  <div class="clientdata">
-                    <div class="clientname row flex-wrap align-items-center">
-                      <div class="cardimg">
-                        <img
-                          class="img-fluid"
-                          src="./Assets/viezh.png"
-                          alt="viezh"
-                        />
-                      </div>
-                      <div class="name">
-                        <span><b>Viezh Robert</b> <br />Warzaw, Poland</span>
-                      </div>
-                      <div class="star">
-                        4.5 <i class="fa-solid fa-star text-warning"></i>
-                      </div>
+                  <div
+                    class="clientdata d-flex align-items-center justify-content-between"
+                  >
+                    <div class="cardimg me-3">
+                      <img
+                        class="img-fluid"
+                        src="./Assets/viezh.png"
+                        alt="viezh"
+                        width="50"
+                      />
+                    </div>
+
+                    <div class="name">
+                      <b>Viezh Robert</b> <br />
+                      <span class="text-muted">Warzaw, Poland</span>
+                    </div>
+
+                    <div class="star d-flex align-items-center ms-auto">
+                      4.5 <i class="fa-solid fa-star text-warning ms-1"></i>
                     </div>
                   </div>
                 </div>
@@ -428,19 +435,25 @@
               <div class="card review-card p-3 mb-4">
                 <div class="cardtop">
                   <div class="clientdata">
-                    <div class="clientname row flex-wrap align-items-center">
-                      <div class="cardimg">
+                    <div
+                      class="clientname d-flex align-items-center justify-content-between"
+                    >
+                      <div class="cardimg me-3">
                         <img
                           class="img-fluid"
                           src="./Assets/yessica.png"
                           alt="yessica"
+                          width="50"
                         />
                       </div>
+
                       <div class="name">
-                        <span><b>Yessica Christy</b> <br />Shanxi, China</span>
+                        <b>Yessica Christy</b> <br />
+                        <span class="text-muted">Shanxi, China</span>
                       </div>
-                      <div class="star">
-                        4.5 <i class="fa-solid fa-star text-warning"></i>
+
+                      <div class="star d-flex align-items-center ms-auto">
+                        4.5 <i class="fa-solid fa-star text-warning ms-1"></i>
                       </div>
                     </div>
                   </div>
@@ -458,21 +471,25 @@
               <div class="card review-card p-3 mb-4">
                 <div class="cardtop">
                   <div class="clientdata">
-                    <div class="clientname row flex-wrap align-items-center">
-                      <div class="cardimg">
+                    <div
+                      class="clientname d-flex align-items-center justify-content-between"
+                    >
+                      <div class="cardimg me-3">
                         <img
                           class="img-fluid"
                           src="./Assets/kim.png"
-                          alt="viezh"
+                          alt="kim"
+                          width="50"
                         />
                       </div>
+
                       <div class="name">
-                        <span
-                          ><b>Kim Young Jou </b> <br />Seoul, South Korea</span
-                        >
+                        <b>Kim Young Jou</b> <br />
+                        <span class="text-muted">Seoul, South Korea</span>
                       </div>
-                      <div class="star">
-                        4.5 <i class="fa-solid fa-star text-warning"></i>
+
+                      <div class="star d-flex align-items-center ms-auto">
+                        4.5 <i class="fa-solid fa-star text-warning ms-1"></i>
                       </div>
                     </div>
                   </div>
@@ -491,10 +508,12 @@
     </section>
 
     <section>
-      <div class="container justify-content-center d-flex my-5">
-        <div class="col-lg-10">
+      <div class="container mt-5">
+        <div class="col-lg-12">
           <div class="card p-5 shadow-lg">
-            <div class="row justify-content-between align-items-center">
+            <div
+              class="row text-center justify-content-between align-items-center px-5"
+            >
               <div class="subscribecontent">
                 <h1>Subscribe Now for Get Special Features</h1>
                 <p>Let's subscribe with us and find the fun.</p>
